--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Contrast Matrix Generator</title>
 </head>
 
-<body class="project">
+<body class="project d-flex flex-column">
     <div class="container-fluid bg-primary bg-opacity-25 border-bottom border-primary py-3 mb-3">
         <div class="row">
             <div class="col text-center">
@@ -18,10 +18,10 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container mb-3">
         <div id="app"></div>
     </div>
-    <div class="container-fluid bg-primary bg-opacity-25 border-top border-primary py-1 mt-3">
+    <div class="container-fluid bg-primary bg-opacity-25 border-top border-primary py-1 mt-auto">
         <div class="row">
             <div class="col-auto ms-auto">
                 <h5 class="mb-0">Developed by <a class="gothic" href="https://twitter.com/NotThatGothic">@NotThatGothic</a></h5>
