--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </div>
     <div class="container mb-3">
         <div id="app"></div>
+        <noscript>
+            <strong>Sorry but the Contrast Matrix Generator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+          </noscript>
     </div>
     <div class="container-fluid bg-primary bg-opacity-25 border-top border-primary py-1 mt-auto">
         <div class="row">
             <div class="col-auto ms-auto">
-                <h5 class="mb-0">Developed by <a class="gothic" href="https://twitter.com/NotThatGothic">@NotThatGothic</a></h5>
+                <h5 class="mb-0">Developed by <a class="gothic" href="https://notthatgothic.github.io">Jack Richardson</a></h5>
             </div>
         </div>
     </div>
     <script type="module" src="/src/main.js"></script>
-    <noscript>
-    <strong>We're sorry but the Contrast Matrix Generator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-  </noscript>
 </body>
 
 </html>
