--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
 
     <title>Contrast Matrix Generator</title>
-  <script type="module" crossorigin src="/contrast-matrix-generator/assets/index.544409b9.js"></script>
-  <link rel="stylesheet" href="/contrast-matrix-generator/assets/index.7ce1542d.css">
+  <script type="module" crossorigin src="/contrast-matrix-generator/assets/index.26497f74.js"></script>
+  <link rel="stylesheet" href="/contrast-matrix-generator/assets/index.f3fa3851.css">
 </head>
 
 <body class="project d-flex flex-column">
@@ -22,18 +22,18 @@
     </div>
     <div class="container mb-3">
         <div id="app"></div>
+        <noscript>
+            <strong>Sorry but the Contrast Matrix Generator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+          </noscript>
     </div>
     <div class="container-fluid bg-primary bg-opacity-25 border-top border-primary py-1 mt-auto">
         <div class="row">
             <div class="col-auto ms-auto">
-                <h5 class="mb-0">Developed by <a class="gothic" href="https://twitter.com/NotThatGothic">@NotThatGothic</a></h5>
+                <h5 class="mb-0">Developed by <a class="gothic" href="https://notthatgothic.github.io">Jack Richardson</a></h5>
             </div>
         </div>
     </div>
     
-    <noscript>
-    <strong>We're sorry but the Contrast Matrix Generator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-  </noscript>
 </body>
 
 </html>
