--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/assets/style.css">
+    <script src="https://colorjs.io/dist/color.global.js"></script>
 
     <title>Contrast Matrix Generator</title>
 </head>
